# Barnes2019-compactness-flexibility

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  RUN.sh  environment.yml  environment_full.yml  make_figs.R  requirements.txt  res_bounded.py  res_fig_gerrymandering.py  res_projections.py  res_simp_indiv.py  res_simp_together.py
data/: cb_2015_us_cd114_20m.dbf  cb_2015_us_cd114_20m.shp  cb_2015_us_cd114_20m.shx  cb_2015_us_cd114_500k.dbf  cb_2015_us_cd114_500k.shx  cb_2015_us_cd114_5m.dbf  cb_2015_us_cd114_5m.shp  cb_2015_us_cd114_5m.shx
output/: effect_of_topography.tbl  scores_double_vs_float
src/: CMakeLists.txt  augmenter.cpp  common.py  districtplot.py  koch.cpp  koch_scores.py  make_figs.R  res_fig_gerrymandering.py  res_projections.py  res_simp_indiv.py  res_simp_together.py
tex/: figure1.tex  figure11_poly_simp.tex  figure14_koch.tex  figure17_optimize.tex
